[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/cube.PNG" type="Texture" id=1]
[ext_resource path="res://Enemy/EnemyShoot.gd" type="Script" id=2]
[ext_resource path="res://Player/explosion.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 98.5224, 100.317 )

[sub_resource type="CircleShape2D" id=2]
radius = 14169.4

[node name="EnemyShoot" type="Sprite"]
self_modulate = Color( 0.811765, 0.0156863, 1, 1 )
position = Vector2( 1.5, 1.5 )
scale = Vector2( 0.416149, 0.39375 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1.20149, -2.53967 )
shape = SubResource( 1 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="LabelPos" type="Position2D" parent="."]
position = Vector2( 99.7239, -100.317 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
